# pytorch-vision-transformers

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  makefile  pyproject.toml
notebooks/: CIFAR.ipynb  CIFAR.py  Transformers_playground.py
tests/: test_conv_mixer.py  test_data.py  test_models.py  test_vision_transformers.py  test_vit.py
tests/vit/: test_unit.py
vision_transformers/: resnet.py  utils_plot.py  vit.py  vit_cifar.py
vision_transformers/data/: cifar.py
vision_transformers/data/utils/: augmentation.py  utils_plot.py
vision_transformers/datasets/: cifar.py
vision_transformers/datasets/utils/: utils_plot.py
vision_transformers/transformers/: lightning_module.py  resnet.py
vision_transformers/transformers/conv_mixer/: conv_mixer.py  conv_mixer_lightning.py
vision_transformers/transformers/vit/: vit.py  vit_lightning.py
vision_transformers/utils/: __init__.py  progressive_img_resizing.py
